[package]
name = "hulypulse"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.97"
config = "0.15.4"
serde = "1.0.219"
actix-web = "4.10.2"
actix-cors = "0.7.1"
refinery = { version = "0.8.16", features = ["tokio-postgres"] }
#tokio-postgres = "0.7.13"
bb8 = "0.9.0"
#bb8-postgres = { version = "0.9.0", features = ["with-uuid-1"] }
bb8-redis = "0.24"
redis = { version = "0.32.2", features = [
    "tokio-comp",
#    "connection-manager",
    "sentinel",
] }
# md5 = "0.7.0"
serde_with = "3"
url = "2"
jsonwebtoken = "9.3.1"
size = { version = "0.5.0", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
hex = "0.4.3"
serde_json = "1.0"
hulyrs = { git = "https://github.com/hcengineering/hulyrs.git", features = ["actix"] }
secrecy = "0.10.3"

[[bin]]
name = "hulypulse"
path = "src/main.rs"
